# ara-metaboliq-app

./: .gitignore  GEMINI_PHASES.md  OPUS_PHASES.md  SONNET_PHASES.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
ai-pipeline/: README.md  collect_voice_data.py  train_voice_xgb.py
app/: _layout.tsx  demo-flow.tsx  nutrition.tsx  onboarding.tsx  patch-connect.tsx
app/(tabs)/: _layout.tsx  exercise.tsx  fintech.tsx  index.tsx  nutrition.tsx  twin.tsx  voice.tsx
backend/: main.py  requirements.txt
backend/config/: settings.py
backend/models/: voice_log.py
backend/routers/: health.py  voice.py
backend/services/: health_score.py  mock_ai_engine.py  ppg_processor.py  spo2_processor.py  temperature_processor.py  voice_ai.py  voice_classifier.py  voice_feature_extractor.py  voice_trend.py
components/health/: HealthScoreRing.tsx  PPGWaveform.tsx  VitalCard.tsx  Waveform.tsx
constants/: api.ts  hardware.ts  ppg.ts  spo2.ts  temperature.ts  theme.ts
firmware/: CMakeLists.txt  prj.conf
firmware/boards/: nrf52840dk_nrf52840.overlay
firmware/src/: ble_service.c  ble_service.h  main.c
firmware/src/drivers/: lsm6dso.c  lsm6dso.h  max86176.c  max86176.h  mems_mic.c  mems_mic.h  ntc_adc.c  ntc_adc.h
hooks/: useHealthScore.ts  usePatchConnection.ts  useRepCounter.ts  useSleepData.ts  useTheme.tsx  useVoiceRecorder.ts
store/: healthStore.ts  sessionStore.ts  userStore.ts
types/: api.d.ts  declarations.d.ts  hardware.d.ts  health.d.ts  nutrition.d.ts  pose.d.ts  ppg.d.ts  spo2.d.ts  temperature.d.ts
(+21 files in other folders)
